--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=WraithTech
 APP_ENV=local
 APP_KEY=base64:aShatPE8gIZyE/fbQOtYdAZnCsADLnOuCe3ZlN9MxSc=
 APP_DEBUG=true
-APP_URL=https://wraithtech.azurewebsites.net/
+APP_URL=http://wraithtech.azurewebsites.net/
 
 LOG_CHANNEL=stack
 
