--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=WraithTech
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:aShatPE8gIZyE/fbQOtYdAZnCsADLnOuCe3ZlN9MxSc=
 APP_DEBUG=true
 APP_URL=http://wraithtech.azurewebsites.net/
